# Da-muzik-box

./: !!! CLICK HERE - DAILY SAVE APP - Copy.bat  !!! CLICK HERE TO SAVE SOURCE.bat  !!! DAILY SAVE - READ THIS.txt  !!! PROJECT FILES ARE HERE.txt  !!! SESSION HANDOFF - 2026-07-10.txt  .env.example  .gitignore  BACKUP-READY.txt  BACKUP-RUNNING-NOW.txt  BACKUP-STATUS.txt  BACKUP-USE-THESE-3-FILES-JULY-4-2026.txt  CHECK-BACKUP-ON-E.bat  Create-Source-Zip-To-E.bat  Create-Source-Zip-To-F.bat  DA-MUSIC-BOX-PLAY-STORE-GUIDE.md  Da-Music-Box-v4.code-workspace  FIND-SAVE-BUTTON.txt  FOLDER-STATUS-STAMP.txt  HOW-TO-SAVE-ON-E.txt  MILESTONE-2026-07-12.txt  NETLIFY-QUICKSTART.txt  Open-Project-Folder.bat  README.md  RUN-BACKUP-NOW.bat  SAVE-APP-NOW.bat  SAVE-SOURCE-NOW.bat  SAVE-STAMP-2026-06-13_0258.txt  SAVE-STAMP-2026-06-13_1550.txt  SAVE-STAMP-2026-06-14_1715.txt  SAVE-STAMP-SPLIT-2026-06-18_1551.txt  SAVE-STAMP-SPLIT-2026-06-18_1623.txt  SAVE-STAMP-SPLIT-2026-07-04_2045.txt  SAVE-STAMP-SPLIT-2026-07-04_2113.txt  SAVE-STAMP-SPLIT-2026-07-09_0115.txt  SETUP-VSCODE.txt  SOURCE-SNAPSHOT.txt  START-APP.bat  WHY-BACKUP-RESTARTS.txt  bunfig.toml  eslint.config.js  (+10 more)
app/: app.tsx  (+2 more)
native/guitar-vst/: CMakeLists.txt
native/guitar-vst/include/: ArticulationManager.h  DaGuitarAudioProcessor.h  DaGuitarAudioProcessorEditor.h  DaGuitarInstrument.h  FretboardCoordinator.h  GuitarSampleMatrix.h  GuitarString.h  GuitarStringSynthesiser.h  GuitarStringVoice.h  GuitarStrummerEngine.h  StringVoiceDelegate.h  VirtualFretboardView.h
native/guitar-vst/scripts/: rename_guitar_samples.py
native/guitar-vst/source/: ArticulationManager.cpp  DaGuitarAudioProcessor.cpp  DaGuitarAudioProcessorEditor.cpp  FretboardCoordinator.cpp  GuitarSampleMatrix.cpp  GuitarStringSynthesiser.cpp  GuitarStringVoice.cpp  (+2 more)
(+1178 files in other folders)
